[package]
name = "mx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.19.1"
actix-web = "4.4.1"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
lazy_static = "1.4.0"
home = "0.5.9"
env_logger = "0.11.0"
local-ip-address = "0.5.7"
serde = { version = "1.0.195", features = ["derive"] }
log = "0.4.20"
qrcode-generator = "4.1.9"
base64 = "0.21.7"
image = "0.24.8"
include_dir = "0.7.3"


